# rag-evaluation

./: README.md  pyproject.toml
src/rag_evaluation/: __init__.py  app.py  help.md  style.css
