[project]
name = "rag-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Filippo B", email = "filippo82@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=3.1.0",
]

[project.scripts]
rag-evaluation = "rag_evaluation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
]

[tool.ruff]
line-length = 120
indent-width = 4
