[project]
name = "rag-evaluation"
version = "0.1.0"
description = "RAG evaluation at terminal velocity"
readme = "README.md"
authors = [
    { name = "Filippo B", email = "filippo82@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "textual>=3.1.0",
]

[project.scripts]
rag-evaluation-ootb = "rag_evaluation:main"
rag-evaluation = "rag_evaluation.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
    "textual-dev>=1.7.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
